# code

./: .gitignore  LICENSE  README.md
from-the-dumbest-case-conversion-to-simd-a-benchmark-journey/: .gitignore  CMakeLists.txt  CMakePresets.json  generator.py  main.cpp  vcpkg.json
writing-a-web-server-in-assembly/Bind_Socket/: Functions.s
writing-a-web-server-in-assembly/Getting_Started/: Functions.s  Server.s
writing-a-web-server-in-assembly/Listening_And_Accepting_Connections/: Server.s
writing-a-web-server-in-assembly/Opening_A_Socket/: Functions.s  Server.s
writing-a-web-server-in-assembly/Read_Request_And_Respond_In_A_Loop/: Server.s
writing-a-web-server-in-assembly/Write_First_Response/: Server.s
writing_a_web_server_in_assembly/: Run.sh  index.html
writing_a_web_server_in_assembly/Bind_Socket/: Server.s
writing_a_web_server_in_assembly/Concurrent_Server/: Functions.s  Server.s
writing_a_web_server_in_assembly/Listening_And_Accepting_Connections/: Functions.s
writing_a_web_server_in_assembly/Python_Test/: main.py
writing_a_web_server_in_assembly/Read_Request_And_Respond_In_A_Loop/: Functions.s
writing_a_web_server_in_assembly/Serve_Files/: Functions.s  Server.s
writing_a_web_server_in_assembly/Write_First_Response/: Functions.s
